--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "demo": "npm --prefix demo run dev",
     "generate:colors": "tsx src/scripts/generate-scss-from-colors.ts",
     "watch:colors": "nodemon --watch src/styles/colors.ts --exec \"tsx src/scripts/generate-scss-from-colors.ts\"",
-    "dev": "npm-run-all --parallel watch:colors build:watch tsm storybook demo"
+    "dev": "npm-run-all --parallel build:watch tsm storybook demo"
   },
   "peerDependencies": {
     "react": "^19.1.0",
@@ -64,7 +64,7 @@
     "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
     "playwright": "^1.52.0",
-    "sass": "^1.87.0",
+    "sass": "^1.89.2",
     "storybook": "^8.6.12",
     "tsx": "^4.19.3",
     "typed-scss-modules": "^8.1.1",
